--- a/classifier_code/requirements.txt
+++ b/classifier_code/requirements.txt
@@ -29,7 +29,7 @@ nvidia-cufft-cu12==11.2.1.3
 nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
+# nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
@@ -51,7 +51,7 @@ tokenizers==0.21.0
 torch==2.5.1
 tqdm==4.67.1
 transformers==4.48.1
-triton==3.1.0
+# triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
